--- a/admin/add_property_grp.html
+++ b/admin/add_property_grp.html
@@ -227,23 +227,23 @@
                         </ul>
                     </div>
                     <div class="body">
-                        <form id="form_validation" method="POST">
+                        <form id="frmAddPropertyGroup" method="POST">
                             <div class="form-group form-float">
                                 <div class="form-line">
-                                    <input type="text" class="form-control" name="name" required>
+                                    <input type="text" class="form-control" name="txtpropertygroupname" required>
                                     <label class="form-label">Enter Property Group Name</label>
                                 </div>
                             </div>
                             <div class="form-group form-float">
                                 <div class="form-line">
-                                    <input type="text" class="form-control" name="surname" required>
+                                    <input type="number" class="form-control" name="txtpropertygroupprice" required>
                                     <label class="form-label">Enter Price</label>
                                 </div>
                             </div>
                             
                             
                             <div class="form-group">
-                                <input type="checkbox" id="checkbox" name="checkbox">
+                                <input type="checkbox" id="checkbox" name="checkbox" required>
                                 <label for="checkbox">I have entered all the details correctly</label>
                             </div>
                             <button class="btn btn-raised btn-primary waves-effect" type="submit">SUBMIT</button>
